--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-qrcode-logo": "^3.0.0",
     "react-router-dom": "^7.1.1",
     "react-spinners": "^0.15.0",
+    "recharts": "^2.15.0",
     "supabase": "^2.6.8",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
